--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#b9f6ca</color>
+    <color name="colorPrimaryLight">#ecfffd</color>
+    <color name="colorPrimaryDark">#88c399</color>
+    <color name="colorPrimaryText">#000000</color>
+    <color name="colorAccent">#ff40ac</color>
 </resources>
