--- a/app/src/main/res/menu/menu_refresh.xml
+++ b/app/src/main/res/menu/menu_refresh.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_refresh"
-        android:title="refresh"
+        android:title="@string/refresh"
         app:showAsAction="never" />
 </menu>
