--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -16,8 +16,18 @@
         android:elevation="6dp"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/battery_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginEnd="4dp"
+        android:contentDescription="@string/battery_icon"
+        android:elevation="8dp"
+        android:src="@drawable/ic_battery"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -112,29 +122,6 @@
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/lux_tv" />
 
-        <ImageView
-            android:id="@+id/battery_icon"
-            android:layout_width="@dimen/image_width"
-            android:layout_height="@dimen/item_height"
-            android:layout_marginStart="@dimen/margin_size"
-            android:layout_marginTop="@dimen/image_margin_top"
-            android:contentDescription="@string/battery_icon"
-            android:src="@drawable/ic_battery"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pressure_icon" />
-
-        <TextView
-            android:id="@+id/battery_tv"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/item_height"
-            android:layout_marginEnd="@dimen/margin_size"
-            android:layout_marginStart="@dimen/margin_size"
-            android:layout_marginTop="4dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/bar_press_tv" />
-
         <android.support.constraint.Guideline
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
@@ -162,6 +149,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/battery_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/bar_press_tv" />
 
 </android.support.constraint.ConstraintLayout>
